--- a/src/app/Components/navbar/navbar.component.scss
+++ b/src/app/Components/navbar/navbar.component.scss
@@ -147,9 +147,10 @@ button {
 }
 
 .mySearch {
+  scrollbar-width: thin;
   display: flex;
   flex-direction: column;
-  background-color: rgb(53 47 47);
+  background-color: rgb(47, 48, 53);
   box-shadow: 1px 1px 4px 3px #1c1818;
   position: absolute;
   width: 350px;
@@ -177,6 +178,7 @@ button {
       .name {
         color: var(--color-var3);
         font-size: 1.4rem;
+        font-weight: 600;
       }
       .catg {
         color: #aca6a5;
