--- a/src/app/Components/single-movie/single-movie.component.scss
+++ b/src/app/Components/single-movie/single-movie.component.scss
@@ -1,162 +1,396 @@
-.smart-image-container {
-  position: relative;
-  overflow: hidden;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  height: 400px;
-}
-
-.smart-image {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: transform 0.3s ease-in-out;
-  border-radius: 35px;
-}
-
-.smart-image-container:hover .smart-image {
-  transform: scale(1.1);
-}
-
-.smart-image-container:hover .overlay {
-  opacity: 1;
-}
-.movie-title {
-  font-family: "Arial", sans-serif;
-  font-size: 2.5rem;
-  color: #ffffff;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  position: relative;
-  display: inline-block;
-  margin-bottom: 20px;
-}
-
-// .movie-title::before,
-// .movie-title::after {
-//   content: '';
-//   position: absolute;
-//   height: 2px;
-//   background-color: #e74c3c;
-//   width: 40%;
-//   top: 50%;
-//   transform: translateY(-50%);
+// .smart-image-container {
+//   position: relative;
+//   overflow: hidden;
+//   border-radius: 8px;
+//   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+//   height: 400px;
 // }
 
-.genre-year-container {
-  margin-left: 5px;
+// .smart-image {
+//   display: block;
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover;
+//   transition: transform 0.3s ease-in-out;
+//   border-radius: 35px;
+// }
+
+// .smart-image-container:hover .smart-image {
+//   transform: scale(1.1);
+// }
+
+// .smart-image-container:hover .overlay {
+//   opacity: 1;
+// }
+// .movie-title {
+//   font-family: "Arial", sans-serif;
+//   font-size: 2.5rem;
+//   color: #ffffff;
+//   text-align: center;
+//   text-transform: uppercase;
+//   letter-spacing: 2px;
+//   position: relative;
+//   display: inline-block;
+//   margin-bottom: 20px;
+// }
+
+// // .movie-title::before,
+// // .movie-title::after {
+// //   content: '';
+// //   position: absolute;
+// //   height: 2px;
+// //   background-color: #e74c3c;
+// //   width: 40%;
+// //   top: 50%;
+// //   transform: translateY(-50%);
+// // }
+
+// .genre-year-container {
+//   margin-left: 5px;
+// }
+
+// .genre-year-container h3 {
+//   font-size: 1.5rem;
+//   display: inline-block;
+//   margin-right: 5px;
+//   color: #faf9f9;
+//   background-color: #e50914;
+//   border-radius: 25px;
+//   padding-right: 10px;
+//   padding-left: 10px;
+//   letter-spacing: 2px;
+//   text-align: center;
+// }
+
+// .genre-year-container p {
+//   font-size: 1.5rem;
+//   display: inline-block;
+//   margin: 0;
+//   color: #f5f5f5;
+// }
+// .box {
+//   border-radius: 12px;
+//   // background-image: url(/assets/hero.jpg);
+//   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+//   padding: 20px;
+//   margin-top: 20px;
+// }
+// :host ::ng-deep .p-rating-icon:not(.p-rating-cancel),
+// :host ::ng-deep .p-rating-icon:not(.p-rating-cancel):hover {
+//   color: yellow !important;
+//   width: 15px;
+// }
+// .customBtn {
+//   color: #fff;
+//   background-color: #e50914;
+//   border: none;
+//   border-radius: 8px;
+//   font-size: 1.5rem;
+//   padding: 10px;
+//   cursor: pointer;
+//   transition: background-color 0.3s ease-in-out;
+// }
+
+// .customBtn:hover {
+//   background-color: #d24249; /* Darker shade on hover; adjust as needed */
+// }
+
+// .customBtn:active {
+//   transform: scale(0.95); /* Slight scale-down effect on button press */
+// }
+// .fav-filled {
+//   fill: red; /* Change the color as desired for the filled state */
+// }
+
+// .fav-empty {
+//   fill: white; /* Change the color as desired for the empty state */
+//   transition: color 0.3s ease-in-out;
+//   /* Add a transition for a smooth color change */
+// }
+
+// .fav-empty:hover {
+//   color: #ff7373; /* Change the color on hover for a visual effect */
+// }
+// .relatedMovie {
+//   height: 300px;
+// }
+// .custom-heart-button {
+//   font-size: 1.5rem;
+//   border-radius: 50%;
+//   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+// }
+// /* Add styles for the filled heart */
+// :host-context(.filled) i.pi-heart:before {
+//   color: red; /* Change the color for the filled heart as needed */
+// }
+
+// /* Add styles for the empty heart */
+// :host-context(:not(.filled)) i.pi-heart:before {
+//   color: #ccc; /* Change the color for the empty heart as needed */
+// }
+
+// /* Add a transition for a smooth color change */
+// :host-context(.filled) i.pi-heart:before,
+// :host-context(:not(.filled)) i.pi-heart:before {
+//   transition: color 0.3s ease-in-out;
+// }
+
+// /* Add styles for the heart on hover */
+// :host-context(div.col-lg-1:hover) i.pi-heart:before {
+//   color: #ff7373; /* Change the color on hover for a visual effect */
+//   transition: color 0.3s ease-in-out;
+// }
+// .card-container {
+//   background-color: #252525;
+//   border-radius: 25px 0;
+//   height: auto;
+// }
+// .card-container img {
+//   border-radius: 25px 0;
+//   height: 250px;
+//   object-fit: cover;
+// }
+// .favMovies {
+//   text-decoration: wavy;
+//   letter-spacing: 3px;
+//   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+//   font-size: 35px;
+//   font-weight: 900;
+// }
+// .wrapper {
+//   display: grid;
+//   grid-template-columns: repeat(5, 1fr);
+//   column-gap: 4rem;
+//   row-gap: 3.5rem;
+
+//   @media (max-width: "1390px") {
+//     grid-template-columns: repeat(4, 1fr);
+//   }
+
+//   @media (max-width: "1175px") {
+//     grid-template-columns: repeat(3, 1fr);
+//   }
+
+//   @media (max-width: "768px") {
+//     grid-template-columns: repeat(2, 1fr);
+//   }
+
+//   @media (max-width: "430px") {
+//     grid-template-columns: repeat(1, 1fr);
+//   }
+// }
+// .comments {
+//   color: #e50914;
+// }
+// /* Smart CSS Style for Textarea */
+// textarea {
+//   box-sizing: border-box;
+//   width: 100%;
+//   padding: 10px;
+//   margin: 10px 0;
+//   border: 1px solid #ccc;
+//   border-radius: 4px;
+//   resize: vertical;
+//   font-size: 16px;
+//   line-height: 1.5;
+//   transition: border-color 0.3s ease-in-out;
+// }
+
+// /* Hover effect */
+// textarea:hover {
+//   border: #e40505 2px solid;
+// }
+
+// /* Focus effect */
+// textarea:focus {
+//   outline: none;
+//   border-color: #2196f3;
+//   box-shadow: 0 0 5px rgba(33, 150, 243, 0.5);
+// }
+
+// /* Disabled state */
+// textarea:disabled {
+//   background-color: #f9f9f9;
+//   cursor: not-allowed;
+// }
+
+// /* Placeholder style */
+// textarea::placeholder {
+//   color: #999;
+// }
+// .small-heart {
+//   width: 10px;
+// }
+
+/////////////////////////////////////////////////////////////////////////////////////////////////////
+
+.single {
+  margin: 0 24px;
+  background: #141e30;
+  background: -webkit-linear-gradient(to right, #21364e, #1b1e25);
+  background: linear-gradient(to right, #21364e, #1b1e25);
+  border-radius: 10px;
+  padding: 30px;
+  margin-bottom: 40px;
+
+  @media (max-width: 768px) {
+    background: -webkit-linear-gradient(to bottom, #21364e, #1b1e25) !important;
+    background: linear-gradient(to bottom, #21364e, #1b1e25) !important;
+    padding: 10px;
+  }
 }
 
-.genre-year-container h3 {
-  font-size: 1.5rem;
-  display: inline-block;
-  margin-right: 5px;
-  color: #faf9f9;
-  background-color: #e50914;
-  border-radius: 25px;
-  padding-right: 10px;
-  padding-left: 10px;
-  letter-spacing: 2px;
-  text-align: center;
+.parent {
+  display: flex;
+  justify-content: space-around;
+  gap: 60px;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .image-details {
+    text-align: center;
+
+    img {
+      width: 300px;
+      height: 400px;
+      border-radius: 15px;
+      box-shadow: 1px 1px 4px 3px #1c1818;
+
+      @media (max-width: 768px) {
+        width: 70%;
+        height: 70%;
+      }
+    }
+
+    .reserve-large {
+      margin-top: 20px;
+      width: 75%;
+      padding: 18px;
+      font-size: 2rem;
+
+      background-image: linear-gradient(
+        to right,
+        #e52d27 0%,
+        #b31217 51%,
+        #e52d27 100%
+      );
+      text-transform: uppercase;
+      background-size: 200% auto;
+      transition: 0.5s;
+    }
+
+    .reserve-large:hover {
+      background-position: right center;
+      color: #fff;
+      text-decoration: none;
+    }
+  }
+
+  .movie-header {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px;
+    margin-bottom: 28px;
+    margin-top: -12px;
+
+    @media (max-width: 768px) {
+      justify-content: center;
+      margin-top: 20px;
+    }
+
+    img {
+      width: 52px;
+      height: 52px;
+      filter: invert(1);
+
+      @media (max-width: 768px) {
+        width: 32px;
+        height: 32px;
+      }
+    }
+
+    h1 {
+      font-size: 4rem;
+      padding-top: 14px;
+
+      @media (max-width: 1024px) {
+        font-size: 3rem;
+      }
+
+      @media (max-width: 768px) {
+        font-size: 2rem;
+      }
+    }
+
+    i {
+      margin-left: auto;
+      margin-right: 4rem;
+      font-size: 35px;
+      cursor: pointer;
+
+      @media (max-width: 1024px) {
+        font-size: 28px;
+      }
+
+      @media (max-width: 768px) {
+        margin-right: 0;
+      }
+    }
+  }
 }
 
-.genre-year-container p {
-  font-size: 1.5rem;
-  display: inline-block;
-  margin: 0;
-  color: #f5f5f5;
-}
-.box {
-  border-radius: 12px;
-  // background-image: url(/assets/hero.jpg);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  margin-top: 20px;
-}
-:host ::ng-deep .p-rating-icon:not(.p-rating-cancel),
-:host ::ng-deep .p-rating-icon:not(.p-rating-cancel):hover {
-  color: yellow !important;
-  width: 15px;
-}
-.customBtn {
-  color: #fff;
-  background-color: #e50914;
-  border: none;
-  border-radius: 8px;
-  font-size: 1.5rem;
-  padding: 10px;
-  cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
+.detail {
+  display: flex;
+  gap: 18px;
+  align-items: center;
+  margin: 12px 0;
 }
 
-.customBtn:hover {
-  background-color: #d24249; /* Darker shade on hover; adjust as needed */
+p {
+  font-size: 1.6rem;
+  font-weight: 600;
 }
 
-.customBtn:active {
-  transform: scale(0.95); /* Slight scale-down effect on button press */
-}
-.fav-filled {
-  fill: red; /* Change the color as desired for the filled state */
-}
-
-.fav-empty {
-  fill: white; /* Change the color as desired for the empty state */
-  transition: color 0.3s ease-in-out;
-  /* Add a transition for a smooth color change */
+.cover {
+  padding: 8px 16px;
+  background-color: var(--color-var4);
+  border-radius: 10px;
+  width: fit-content;
+  text-transform: uppercase;
 }
 
-.fav-empty:hover {
-  color: #ff7373; /* Change the color on hover for a visual effect */
-}
-.relatedMovie {
-  height: 300px;
-}
-.custom-heart-button {
-  font-size: 1.5rem;
-  border-radius: 50%;
-  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
-}
-/* Add styles for the filled heart */
-:host-context(.filled) i.pi-heart:before {
-  color: red; /* Change the color for the filled heart as needed */
+.description {
+  width: 75%;
+  margin: 12px 0;
+
+  @media (max-width: 1024px) {
+    width: 100%;
+  }
+
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
 
-/* Add styles for the empty heart */
-:host-context(:not(.filled)) i.pi-heart:before {
-  color: #ccc; /* Change the color for the empty heart as needed */
+.info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 70%;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0;
+  }
 }
 
-/* Add a transition for a smooth color change */
-:host-context(.filled) i.pi-heart:before,
-:host-context(:not(.filled)) i.pi-heart:before {
-  transition: color 0.3s ease-in-out;
-}
+///////////////////////////////////////////////////////////////////////////
 
-/* Add styles for the heart on hover */
-:host-context(div.col-lg-1:hover) i.pi-heart:before {
-  color: #ff7373; /* Change the color on hover for a visual effect */
-  transition: color 0.3s ease-in-out;
-}
-.card-container {
-  background-color: #252525;
-  border-radius: 25px 0;
-  height: auto;
-}
-.card-container img {
-  border-radius: 25px 0;
-  height: 250px;
-  object-fit: cover;
-}
-.favMovies {
-  text-decoration: wavy;
-  letter-spacing: 3px;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  font-size: 35px;
-  font-weight: 900;
-}
 .wrapper {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -179,45 +413,127 @@
     grid-template-columns: repeat(1, 1fr);
   }
 }
-.comments {
-  color: #e50914;
-}
-/* Smart CSS Style for Textarea */
-textarea {
-  box-sizing: border-box;
-  width: 100%;
-  padding: 10px;
-  margin: 10px 0;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-  font-size: 16px;
-  line-height: 1.5;
-  transition: border-color 0.3s ease-in-out;
+
+.related {
+  margin: 4rem;
+
+  h1 {
+    font-size: 3.4rem;
+    margin-bottom: 4rem;
+
+    @media (max-width: 768px) {
+      font-size: 2.4rem;
+      text-align: center;
+    }
+  }
 }
 
-/* Hover effect */
-textarea:hover {
-  border: #e40505 2px solid;
+/////////////////////////////////////////////////////////////////////////////////////
+
+.reviews {
+  margin: 4rem 0;
+
+  .review-header {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10px;
+    margin-bottom: 2rem;
+
+    h2 {
+      font-size: 3rem;
+      padding-top: 14px;
+    }
+  }
+
+  .review-container {
+    width: 100%;
+    padding: 20px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 50%;
+
+    font-size: 16px;
+    line-height: 1.5;
+    transition: border-color 0.3s ease-in-out;
+
+    @media (max-width: 768px) {
+      width: 100%;
+    }
+
+    h2 {
+      margin-bottom: 20px;
+    }
+
+    textarea {
+      resize: horizontal;
+      width: 400px;
+      height: 100px;
+      border-radius: 10px;
+      outline: none;
+      padding: 10px;
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+      font-size: 1.4rem;
+
+      @media (max-width: 1024px) {
+        width: 100%;
+      }
+
+      @media (max-width: 768px) {
+        width: 100%;
+      }
+    }
+
+    .rate-container {
+      margin: 10px 0;
+      display: flex;
+      gap: 20px;
+    }
+
+    button {
+      width: 200px;
+      padding: 12px;
+      font-size: 1.8rem;
+
+      @media (max-width: 768px) {
+        width: 100%;
+      }
+    }
+  }
 }
 
-/* Focus effect */
-textarea:focus {
-  outline: none;
-  border-color: #2196f3;
-  box-shadow: 0 0 5px rgba(33, 150, 243, 0.5);
+.reserve-small {
+  display: none;
 }
 
-/* Disabled state */
-textarea:disabled {
-  background-color: #f9f9f9;
-  cursor: not-allowed;
-}
+@media (max-width: 768px) {
+  .reserve-large {
+    display: none;
+  }
 
-/* Placeholder style */
-textarea::placeholder {
-  color: #999;
-}
-.small-heart {
-  width: 10px;
+  .reserve-small {
+    display: block;
+    margin-top: 20px;
+    width: 75%;
+    padding: 18px;
+    font-size: 2rem;
+    margin: 8px auto;
+
+    background-image: linear-gradient(
+      to right,
+      #e52d27 0%,
+      #b31217 51%,
+      #e52d27 100%
+    );
+    text-transform: uppercase;
+    background-size: 200% auto;
+    transition: 0.5s;
+  }
+
+  .reserve-large:hover {
+    background-position: right center;
+    color: #fff;
+    text-decoration: none;
+  }
 }
