--- a/src/app/Components/carousel/carousel.component.html
+++ b/src/app/Components/carousel/carousel.component.html
@@ -13,7 +13,7 @@
       [responsiveOptions]="responsiveOptions"
     >
       <ng-template let-movie pTemplate="item">
-        <div class="myCardCarousel" [routerLink]="'movie/' + movie.Title">
+        <div class="myCardCarousel" (click)="routeToSingleMovie(movie)">
           <div class="myimg">
             <img [src]="movie.Poster" class="w-6 shadow-2" />
           </div>
