--- a/src/app/Pages/booking/booking.component.scss
+++ b/src/app/Pages/booking/booking.component.scss
@@ -12,6 +12,11 @@
   font-weight: 500;
 }
 
+small {
+  font-size: 12px;
+  font-weight: 400;
+}
+
 .screen-container {
   width: 100%;
   height: 60px;
