--- a/src/app/Components/single-movie/single-movie.component.html
+++ b/src/app/Components/single-movie/single-movie.component.html
@@ -207,7 +207,7 @@
 
         <div>
           <div class="detail">
-            <p class="cover">Rated</p>
+            <p class="cover">Rating</p>
             <p-rating
               [(ngModel)]="value"
               [cancel]="false"
