--- a/src/app/Pages/profile/profile.component.scss
+++ b/src/app/Pages/profile/profile.component.scss
@@ -24,7 +24,7 @@
     display: flex;
     padding-inline-start: 205px;
     .profile-pic {
-      background-color: #1f1c1c;
+      background-color: var(--color-var1);
       position: relative;
       border-radius: 50%;
 
