--- a/src/app/Components/filter/filter.component.scss
+++ b/src/app/Components/filter/filter.component.scss
@@ -14,6 +14,7 @@
   }
   .p-dropdown-items-wrapper {
     background-color: rgb(47, 48, 53);
+    scrollbar-width: thin;
     color: white;
     ul {
       padding-left: 0;
