--- a/src/app/Components/single-movie/single-movie.component.scss
+++ b/src/app/Components/single-movie/single-movie.component.scss
@@ -247,7 +247,7 @@
 
   @media (max-width: 768px) {
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
   }
 
   .image-details {
@@ -299,18 +299,7 @@
 
     @media (max-width: 768px) {
       justify-content: center;
-      margin-top: 20px;
-    }
-
-    img {
-      width: 52px;
-      height: 52px;
-      filter: invert(1);
-
-      @media (max-width: 768px) {
-        width: 32px;
-        height: 32px;
-      }
+      margin: 20px 12px;
     }
 
     h1 {
@@ -515,7 +504,7 @@ p {
   .reserve-small {
     display: block;
     margin-top: 20px;
-    width: 75%;
+    width: 50%;
     padding: 18px;
     font-size: 2rem;
     margin: 8px auto;
@@ -535,5 +524,12 @@ p {
     background-position: right center;
     color: #fff;
     text-decoration: none;
+  }
+}
+
+@media (max-width: 500px) {
+  .reserve-small {
+    width: 75%;
+    font-size: 1.8rem;
   }
 }
