refactor: :recycle: Update navbar

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -85,7 +85,10 @@
       <div class="google-info">
         <img [src]="googlePicture" routerLink="/profile" />
 
-        <button class="secondary-btn" (click)="handleSignOut()">
+        <button
+          class="secondary-btn"
+          (click)="handleSignOut()"
+        >
           Sign Out
         </button>
       </div>
