--- a/src/app/Components/navbar/navbar.component.scss
+++ b/src/app/Components/navbar/navbar.component.scss
@@ -326,6 +326,7 @@ button {
   display: flex;
   align-items: center;
   gap: 10px;
+
   img {
     width: 38px;
     height: 38px;
@@ -338,6 +339,12 @@ button {
 
   img:hover {
     transform: scale(1.15);
+  }
+
+  @media (max-width: 768px) {
+    button {
+      margin-top: 10px;
+    }
   }
 
   p {
