fix: :bug: Lock footer on dashboard

--- a/src/app/Components/hero/hero.component.html
+++ b/src/app/Components/hero/hero.component.html
@@ -5,8 +5,9 @@
       Discover the Magic of Cinema with <span>I<span>WATCH</span></span
       >, Reserve Your Seat for an Unforgettable Movie Night Adventure Today
     </p>
-    <button class="primary-btn">
-      <a href="#Movies">Reserve Now</a>
-    </button>
+
+    <a href="#Movies">
+      <button class="primary-btn">Reserve Now</button>
+    </a>
   </div>
 </div>
