--- a/src/app/Pages/sign-up/sign-up.component.html
+++ b/src/app/Pages/sign-up/sign-up.component.html
@@ -57,6 +57,7 @@
             <input
               type="password"
               name="password"
+              autocomplete="off"
               formControlName="password"
               required
               #passwordInput
@@ -92,6 +93,7 @@
             <input
               type="password"
               name="confirmPassword"
+              autocomplete="off"
               formControlName="confirmPassword"
               required
               #confirmPasswordInput
