--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,11 @@
   --color-var3: #e50914;
   // hover
   --color-var4: #b81d24;
+  //charts color
+  --color-chart1: #b81d24;
+  --color-chart2: #f7575f;
+  --color-chart3: rgb(211, 208, 208);
+  --color-chart4: grey;
 }
 
 * {
