--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -76,9 +76,19 @@
     </div>
     @if (!hideLinks) {
     <div class="mob-links">
-      <a routerActiveLink="active" routerLink="/">Home</a>
-      <a href="#Trending">Trending</a>
-      <a routerActiveLink="active" routerLink="/checkout">Cart</a>
+      <a
+        routerActiveLink="active"
+        routerLink="/"
+        (click)="sidebarVisible = false"
+        >Home</a
+      >
+      <a href="#Trending" (click)="sidebarVisible = false">Trending</a>
+      <a
+        routerActiveLink="active"
+        routerLink="/checkout"
+        (click)="sidebarVisible = false"
+        >Cart</a
+      >
     </div>
     }
 
@@ -87,10 +97,7 @@
       <div class="google-info">
         <img [src]="googlePicture" routerLink="/profile" />
 
-        <button
-          class="secondary-btn"
-          (click)="handleSignOut()"
-        >
+        <button class="secondary-btn" (click)="handleSignOut()">
           Sign Out
         </button>
       </div>
