--- a/src/app/Pages/dashboard/dashboard.component.scss
+++ b/src/app/Pages/dashboard/dashboard.component.scss
@@ -1,6 +1,5 @@
 .dash-cover {
-  box-shadow: inset 0 0 0 2000px #221f1f82;
-  background-color: #3e3031;
+  background-color: #262931;
   height: 210px;
 
   .title {
@@ -27,7 +26,7 @@
     margin-top: -120px;
     .dash-card {
       box-shadow: 1px 1px 4px 3px #1c1818;
-      background-color: #1f1c1c;
+      background-color: #1b1e25;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -69,7 +68,9 @@
     margin-top: 60px;
 
     .card {
-      background-color: #1f1c1c;
+      background-color: #1b1e25;
+      box-shadow: 1px 1px 4px 3px #1c1818;
+
       margin-bottom: 60px;
       padding: 15px;
       @media (max-width: 500px) {
