--- a/src/app/Pages/profile/profile.component.html
+++ b/src/app/Pages/profile/profile.component.html
@@ -31,7 +31,7 @@
               </div>
               Favourites
             </div>
-            @if (user.favourite) {
+            @if (user.favourite&&user.favourite.length>0) {
 
             <div class="favourites">
               <div class="row gy-5">
@@ -47,7 +47,7 @@
             <div class="noFav">
               Make your favorites now!
               <img
-                src="../../../assets/images/surprised.png"
+                src="/assets/images/surprised.png"
                 width="25px"
                 height="25px"
               />
@@ -60,7 +60,7 @@
               </div>
               Purchased
             </div>
-            @if (user.purchased) {
+            @if (user.purchased&&user.purchased.length>0) {
             <div class="purchased">
               <div class="row gy-5">
                 @for (movie of displayedMovieNamesForUser; track user.id ;) {
