--- a/src/app/Pages/checkout/checkout.component.scss
+++ b/src/app/Pages/checkout/checkout.component.scss
@@ -4,7 +4,7 @@
   grid-gap: 20px;
   margin: 20px 40px;
   padding: 20px;
-  background-color: #14141a;
+  background-color: #1b1919;
   border-radius: 10px;
 }
 
