--- a/src/app/Components/single-movie/single-movie.component.html
+++ b/src/app/Components/single-movie/single-movie.component.html
@@ -204,7 +204,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="flex-second-column">
           <div class="detail">
             <p class="cover">Rating</p>
             <p-rating
