--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,16 @@
 @import "primeicons/primeicons.css";
 
 :root {
-  --color-var1: #1b1e25;
+  // Palette
+  --color-var1: #221f1f;
   --color-var2: #f5f5f1;
-  // style
   --color-var3: #e50914;
-  // hover
   --color-var4: #b81d24;
-  //charts color
+
+  // Utility
+  --color-var5: rgb(53 47 47);
+
+  // Charts
   --color-chart1: #b81d24;
   --color-chart2: #f7575f;
   --color-chart3: rgb(211, 208, 208);
