--- a/Frontend/src/app/Components/single-movie/single-movie.component.scss
+++ b/Frontend/src/app/Components/single-movie/single-movie.component.scss
@@ -1,229 +1,3 @@
-// .smart-image-container {
-//   position: relative;
-//   overflow: hidden;
-//   border-radius: 8px;
-//   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-//   height: 400px;
-// }
-
-// .smart-image {
-//   display: block;
-//   width: 100%;
-//   height: 100%;
-//   object-fit: cover;
-//   transition: transform 0.3s ease-in-out;
-//   border-radius: 35px;
-// }
-
-// .smart-image-container:hover .smart-image {
-//   transform: scale(1.1);
-// }
-
-// .smart-image-container:hover .overlay {
-//   opacity: 1;
-// }
-// .movie-title {
-//   font-family: "Arial", sans-serif;
-//   font-size: 2.5rem;
-//   color: #ffffff;
-//   text-align: center;
-//   text-transform: uppercase;
-//   letter-spacing: 2px;
-//   position: relative;
-//   display: inline-block;
-//   margin-bottom: 20px;
-// }
-
-// // .movie-title::before,
-// // .movie-title::after {
-// //   content: '';
-// //   position: absolute;
-// //   height: 2px;
-// //   background-color: #e74c3c;
-// //   width: 40%;
-// //   top: 50%;
-// //   transform: translateY(-50%);
-// // }
-
-// .genre-year-container {
-//   margin-left: 5px;
-// }
-
-// .genre-year-container h3 {
-//   font-size: 1.5rem;
-//   display: inline-block;
-//   margin-right: 5px;
-//   color: #faf9f9;
-//   background-color: #e50914;
-//   border-radius: 25px;
-//   padding-right: 10px;
-//   padding-left: 10px;
-//   letter-spacing: 2px;
-//   text-align: center;
-// }
-
-// .genre-year-container p {
-//   font-size: 1.5rem;
-//   display: inline-block;
-//   margin: 0;
-//   color: #f5f5f5;
-// }
-// .box {
-//   border-radius: 12px;
-//   // background-image: url(/assets/hero.jpg);
-//   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-//   padding: 20px;
-//   margin-top: 20px;
-// }
-// :host ::ng-deep .p-rating-icon:not(.p-rating-cancel),
-// :host ::ng-deep .p-rating-icon:not(.p-rating-cancel):hover {
-//   color: yellow !important;
-//   width: 15px;
-// }
-// .customBtn {
-//   color: #fff;
-//   background-color: #e50914;
-//   border: none;
-//   border-radius: 8px;
-//   font-size: 1.5rem;
-//   padding: 10px;
-//   cursor: pointer;
-//   transition: background-color 0.3s ease-in-out;
-// }
-
-// .customBtn:hover {
-//   background-color: #d24249; /* Darker shade on hover; adjust as needed */
-// }
-
-// .customBtn:active {
-//   transform: scale(0.95); /* Slight scale-down effect on button press */
-// }
-// .fav-filled {
-//   fill: red; /* Change the color as desired for the filled state */
-// }
-
-// .fav-empty {
-//   fill: white; /* Change the color as desired for the empty state */
-//   transition: color 0.3s ease-in-out;
-//   /* Add a transition for a smooth color change */
-// }
-
-// .fav-empty:hover {
-//   color: #ff7373; /* Change the color on hover for a visual effect */
-// }
-// .relatedMovie {
-//   height: 300px;
-// }
-// .custom-heart-button {
-//   font-size: 1.5rem;
-//   border-radius: 50%;
-//   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
-// }
-// /* Add styles for the filled heart */
-// :host-context(.filled) i.pi-heart:before {
-//   color: red; /* Change the color for the filled heart as needed */
-// }
-
-// /* Add styles for the empty heart */
-// :host-context(:not(.filled)) i.pi-heart:before {
-//   color: #ccc; /* Change the color for the empty heart as needed */
-// }
-
-// /* Add a transition for a smooth color change */
-// :host-context(.filled) i.pi-heart:before,
-// :host-context(:not(.filled)) i.pi-heart:before {
-//   transition: color 0.3s ease-in-out;
-// }
-
-// /* Add styles for the heart on hover */
-// :host-context(div.col-lg-1:hover) i.pi-heart:before {
-//   color: #ff7373; /* Change the color on hover for a visual effect */
-//   transition: color 0.3s ease-in-out;
-// }
-// .card-container {
-//   background-color: #252525;
-//   border-radius: 25px 0;
-//   height: auto;
-// }
-// .card-container img {
-//   border-radius: 25px 0;
-//   height: 250px;
-//   object-fit: cover;
-// }
-// .favMovies {
-//   text-decoration: wavy;
-//   letter-spacing: 3px;
-//   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-//   font-size: 35px;
-//   font-weight: 900;
-// }
-// .wrapper {
-//   display: grid;
-//   grid-template-columns: repeat(5, 1fr);
-//   column-gap: 4rem;
-//   row-gap: 3.5rem;
-
-//   @media (max-width: "1390px") {
-//     grid-template-columns: repeat(4, 1fr);
-//   }
-
-//   @media (max-width: "1175px") {
-//     grid-template-columns: repeat(3, 1fr);
-//   }
-
-//   @media (max-width: "768px") {
-//     grid-template-columns: repeat(2, 1fr);
-//   }
-
-//   @media (max-width: "430px") {
-//     grid-template-columns: repeat(1, 1fr);
-//   }
-// }
-// .comments {
-//   color: #e50914;
-// }
-// /* Smart CSS Style for Textarea */
-// textarea {
-//   box-sizing: border-box;
-//   width: 100%;
-//   padding: 10px;
-//   margin: 10px 0;
-//   border: 1px solid #ccc;
-//   border-radius: 4px;
-//   resize: vertical;
-//   font-size: 16px;
-//   line-height: 1.5;
-//   transition: border-color 0.3s ease-in-out;
-// }
-
-// /* Hover effect */
-// textarea:hover {
-//   border: #e40505 2px solid;
-// }
-
-// /* Focus effect */
-// textarea:focus {
-//   outline: none;
-//   border-color: #2196f3;
-//   box-shadow: 0 0 5px rgba(33, 150, 243, 0.5);
-// }
-
-// /* Disabled state */
-// textarea:disabled {
-//   background-color: #f9f9f9;
-//   cursor: not-allowed;
-// }
-
-// /* Placeholder style */
-// textarea::placeholder {
-//   color: #999;
-// }
-// .small-heart {
-//   width: 10px;
-// }
-
-/////////////////////////////////////////////////////////////////////////////////////////////////////
-
 .single {
   margin: 0 24px;
   background: #1e130c;
@@ -235,8 +9,8 @@
   margin-bottom: 40px;
 
   @media (max-width: 768px) {
-    background: -webkit-linear-gradient(to bottom, #21364e, #221f1f) !important;
-    background: linear-gradient(to bottom, #21364e, #221f1f) !important;
+    background: -webkit-linear-gradient(to bottom, #56463e, #221f1f) !important;
+    background: linear-gradient(to bottom, #56463e, #221f1f) !important;
     padding: 10px;
   }
 }
@@ -378,8 +152,13 @@ p {
 
   @media (max-width: 768px) {
     flex-direction: column;
+    justify-content: flex-start;
     align-items: flex-start;
     gap: 0;
+
+    .flex-second-column {
+      align-self: flex-start;
+    }
   }
 }
 
