--- a/Frontend/src/app/Pages/dashboard/dashboard.component.html
+++ b/Frontend/src/app/Pages/dashboard/dashboard.component.html
@@ -19,25 +19,32 @@
       <div class="dashboard">
         <div class="allCards">
           <div class="row gy-5 justify-content-center">
-            <div class="col-lg-6 col-md-8 col-sm-12">
+            <div class="col-lg-6 col-sm-12">
               <div class="dash-card">
                 <div class="img"><img src="/assets/images/rating.png" /></div>
                 <div class="number">{{ dashData.dashb.totalReview }}</div>
                 <div class="desc">Total Reviews</div>
               </div>
             </div>
-            <div class="col-lg-6 col-md-8 col-sm-12">
+            <div class="col-lg-6 col-sm-12">
               <div class="dash-card">
                 <div class="img"><img src="/assets/images/sales.png" /></div>
                 <div class="number">{{ dashData.dashb.totalSales }}</div>
                 <div class="desc">Total Sales</div>
               </div>
             </div>
-            <div class="col-lg-6 col-md-8 col-sm-12">
+            <div class="col-lg-6 col-sm-12">
               <div class="dash-card">
                 <div class="img"><img src="/assets/images/users.png" /></div>
                 <div class="number">{{ dashData.dashb.usersCount }}</div>
                 <div class="desc">Total Users</div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+              <div class="dash-card">
+                <div class="img"><img src="/assets/images/clapper.png" /></div>
+                <div class="number">{{ dashData.dashb.totalMovies }}</div>
+                <div class="desc">Total Movies</div>
               </div>
             </div>
           </div>
