--- a/Frontend/src/app/Components/single-movie/single-movie.component.html
+++ b/Frontend/src/app/Components/single-movie/single-movie.component.html
@@ -125,7 +125,7 @@
       <div style="display: flex; flex-direction: column; gap: 10px">
         <div>
           <p-avatar
-            [label]="review?.name[0]"
+            [label]="review.name ? review.name[0] : ''"
             icon="pi pi-user"
             size="large"
             shape="circle"
